--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-tranquilpeak-theme"]
 	path = themes/hugo-tranquilpeak-theme
-	url = git@github.com:kakawait/hugo-tranquilpeak-theme.git
+	url = https://github.com/vaibhawchandel/hugo-tranquilpeak-theme.git
