--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ canonifyurls = true
   job = "Machine Learning Engineer"
   location = "Toronto"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
-  gravatarEmail = "vaibhawchandel@gmail.com"
+  gravatarEmail = "chandel.vaibhaw@gmail.com"
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   picture = "https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png"
