--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
           external_repository: vaibhaw/vaibhaw.github.io
-          publish_branch: master  # default: gh-pages
+          publish_branch: main  # default: gh-pages
           publish_dir: ./public
